# Flet-Python

./: README.md  expl_compont_txt.py  pyproject.toml
src/: Fund_estr_flet_add_elemts.py  Text.py  aula-DPSEDEBP223543.py  aula.py  criação_de_comp.py  page_1.py  page_2.py
