[tool.poetry]
name = "fletav"
version = "0.1.0"
description = "Meu projeto FletAV"
authors = ["Seu Nome <seuemail@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]  # Substitua "fletav" pelo nome correto do diretório do projeto

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
